# mapto3d

./: AGENTS.md  Cargo.toml  PLAN.md  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/api/: mod.rs  nominatim.rs  overpass.rs
src/config/: mod.rs
src/domain/: mod.rs  park.rs  road.rs  water.rs
src/geometry/: mod.rs  projection.rs  scaling.rs  simplify.rs
src/layers/: base.rs  mod.rs  parks.rs  roads.rs  text.rs  water.rs
src/mesh/: builder.rs  extrusion.rs  mod.rs  ribbon.rs  stl.rs  triangulation.rs  validation.rs
src/osm/: mod.rs  parser.rs
