[package]
name = "mapto3d"
version = "0.1.1"
edition = "2024"
description = "Generate 3D-printable STL city maps from OpenStreetMap data"
license = "MIT"
repository = "https://github.com/shantanugoel/mapto3d"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
geo = "0.29"
stl_io = "0.10"
anyhow = "1"
thiserror = "2"
indicatif = "0.17"
earcutr = "0.4"
dirs = "6"
fontmesh = "0.3"

[dev-dependencies]
tempfile = "3.24.0"
